linked all files

--- a/Representatives-details.html
+++ b/Representatives-details.html
@@ -9,7 +9,7 @@
         <header>
             <br><br><br><br>
             <br><br>
-            <img src="images/keyboard_backspace.png" class="keys">
+            <a href="petition-2.html"><img src="images/keyboard_backspace.png" class="keys"></a>
 
             <fieldset>
                 <legend><img src="images/Rectangle 41.png"></legend>
