--- a/menu.html
+++ b/menu.html
@@ -11,9 +11,9 @@
         </header>
             <div class="color"><a href="sign-up.html">Login/Register</a>
             <hr>
-            <a href="#" class="sec">Know Your Reps</a>
+            <a href="reps.html" class="sec">Know Your Reps</a>
             <hr>
-            <a href="#">Show Petitions</a>
+            <a href="petitions.html">Show Petitions</a>
             <hr>
             <a href="Petition-title.html">Start a New Petition</a>
             <hr>
