--- a/petition-2.html
+++ b/petition-2.html
@@ -10,7 +10,7 @@
         <header>
             
             <img src="images/Logo.png" class="logo">
-            <a href="index.html">
+            <a href="petitions.html">
             <img src="images/keyboard_backspace.png" class="arrow">
         </a>
             
@@ -30,7 +30,7 @@
             </p>
             <div class="dive">
                 <div>
-               <img src="images/keys-space.png" class="hello"><a href="Represnetatives-details.html" class="hen">More Details</a>
+               <img src="images/keys-space.png" class="hello"><a href="Representatives-details.html" class="hen">More Details</a>
                 </div>
                 <a href="petitions.html">
                 <button>Sign this Petition<img src="images/keys.png" class="insta"></button>
